--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -41,7 +41,7 @@
           <% }else{%> 
            
         <form action="/logout" method="post">
-          <button>sighn out</button>
+          <button>logout</button>
         </form>
         <% } %> 
       </div>
