--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,20 +1,20 @@
 
+<% if(success && success.length){%> 
 
-<div class="alert alert-success  alert-dismissible fade show" role="alert">
-
-<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-    <span aria-hidden="true">&times;</span>
-</button>
-</div>
-
-
-
-    <div class="alert alert-danger  alert-dismissible fade show" role="alert">
-
+    <div class="alert alert-success  alert-dismissible fade show" role="alert">
+    <%= success %> 
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
     </div>
-
-
-
+    <% } %> 
+    <% if(error&& error.length){%> 
+    
+        <div class="alert alert-danger  alert-dismissible fade show" role="alert">
+        <%= error %> 
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+        <% } %> 
+    
