--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="navbar-nav ml-auto">
-        <%if(typeof currentUser !=='undefined' && !currentUser) {%> 
+        <%if(typeof currentUser =='undefined' && !currentUser) {%> 
         <a class="nav-link" href="/login">Login</a>
         <a class="nav-link" href="/register">Regiester</a>
         <% }else{%> 
