--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">        
       <div class="navbar-nav">
         <a class="nav-link active" href="/">Home</a>
-        <%if(typeof currentUser !=='undefined' && currentUser){%>
+        
+            <%if(typeof currentUser !=='undefined' && currentUser && currentUser.isAdmin ){%>
 
         <a class="nav-link active" href="/user">All user</a>
      
@@ -17,7 +18,7 @@
        
         <% } %> 
      
-        <%if(typeof currentUser !=='undefined' && currentUser) {%> 
+        <%if(typeof currentUser !=='undefined' || currentUser) {%> 
           <a class="nav-link" href="/cancelmessage">Cancel message</a>
         <a class="nav-link" href="/bookeduser">booking details</a>
         <% } %> 
